--- a/5p1/index.html
+++ b/5p1/index.html
@@ -19,7 +19,7 @@
   
 <setup>
   <numberList name="sols">4 5 1 3 2 3 2 4 5 1 5 1 2 4 3 2 3 5 1 4 1 4 3 2 5</numberList>
-  <numberList name="ans">$ans11 $ans12 $ans13 $ans14 $ans15 $ans21 $ans22 $ans23 $ans24 $ans25 $ans31 $ans32 $ans33 $ans34 $ans35 $ans41 $ans42 $ans43 $ans44 $ans45</numberList>
+  <numberList name="ans">$ans11 $ans12 $ans13 $ans14 $ans15 $ans21 $ans22 $ans23 $ans24 $ans25 $ans31 $ans32 $ans33 $ans34 $ans35 $ans41 $ans42 $ans43 $ans44 $ans45 $ans51 $ans52 $ans53 $ans54 $ans55</numberList>
 </setup>
 
 <aside><title>Rules of KenKen</title>
@@ -93,12 +93,6 @@
 <answer name="check"><award><when>$sols = $ans</when></award></answer>
 
 </activity>
-
-
-
-
-
-
 
 
       </script>
