--- a/6p1/index.html
+++ b/6p1/index.html
@@ -1,3 +1,19 @@
+ <!DOCTYPE html>
+ <html> 
+      <script type="module" src="https://dev.doenet.org/cdn/doenet-standalone.js"> </script>
+     <link rel="stylesheet" href="https://dev.doenet.org/cdn/style.css">
+ <body onload="onPageLoad()">
+  
+ <script>
+ function onPageLoad() {
+   window.renderDoenetToContainer(document.querySelector(".doenetml-applet"));
+ }
+ </script>
+ 
+  <div class="doenetml-applet">
+      <script type="text/doenetml">
+
+
 <activity><title>KenKen Puzzle (6x6) #1</title>
   
 <setup>
@@ -100,3 +116,19 @@
 <answer name="check"><award><when>$sols = $ans</when></award></answer>
 
 </activity>
+
+
+
+
+      </script>
+  </div>
+ 
+ </body>
+
+
+
+
+
+
+
+
