--- a/6p1/index.html
+++ b/6p1/index.html
@@ -98,24 +98,25 @@
   <textInput name="ans66" anchor="$anchors[36]" width="25"/>
 
   <label name="rule11" anchor="$anchors[1]"><m>\Large{5}</m></label>
-  <label name="rule13" anchor="$anchors[13] + (-0.15, 0.3)"><m>\Large{5~-}</m></label>
-  <label name="rule51" anchor="$anchors[25] + (-0.15, 0.3)"><m>\Large{6~\times}</m></label>
-  <label name="rule21" anchor="$anchors[2] + (-0.15, 0.3)"><m>\Large{11~+}</m></label>
-  <label name="rule41" anchor="$anchors[20] + (-0.10, 0.3)"><m>\Large{150~\times}</m></label>
-  <label name="rule23" anchor="$anchors[9] + (-0.15, 0.3)"><m>\Large{13~+}</m></label>
-  <label name="rule14" anchor="$anchors[4] + (-0.15, 0.3)"><m>\Large{4~+}</m></label>
-  <label name="rule34" anchor="$anchors[16] + (-0.15, 0.3)"><m>\Large{12~+}</m></label>
-  <label name="rule64" anchor="$anchors[34] + (-0.15, 0.3)"><m>\Large{2~-}</m></label>
-  <label name="rule25" anchor="$anchors[11] + (-0.15, 0.3)"><m>\Large{4~\times}</m></label>
-  <label name="rule45" anchor="$anchors[23] + (-0.15, 0.3)"><m>\Large{36~\times}</m></label>
-  <label name="rule16" anchor="$anchors[6] + (-0.15, 0.3)"><m>\Large{15~+}</m></label>
-  <label name="rule36" anchor="$anchors[18] + (-0.15, 0.3)"><m>\Large{2~\div}</m></label>
-  <label name="rule56" anchor="$anchors[30] + (-0.15, 0.3)"><m>\Large{10~\times}</m></label>
+  <label name="rule13" anchor="$anchors[13] + (-0.15, 0.3)"><m>\large{5~-}</m></label>
+  <label name="rule51" anchor="$anchors[25] + (-0.15, 0.3)"><m>\large{6~\times}</m></label>
+  <label name="rule21" anchor="$anchors[2] + (-0.15, 0.3)"><m>\large{11~+}</m></label>
+  <label name="rule41" anchor="$anchors[20] + (-0.10, 0.3)"><m>\large{150~\times}</m></label>
+  <label name="rule23" anchor="$anchors[9] + (-0.15, 0.3)"><m>\large{13~+}</m></label>
+  <label name="rule14" anchor="$anchors[4] + (-0.15, 0.3)"><m>\large{4~+}</m></label>
+  <label name="rule34" anchor="$anchors[16] + (-0.15, 0.3)"><m>\large{12~+}</m></label>
+  <label name="rule64" anchor="$anchors[34] + (-0.15, 0.3)"><m>\large{2~-}</m></label>
+  <label name="rule25" anchor="$anchors[11] + (-0.15, 0.3)"><m>\large{4~\times}</m></label>
+  <label name="rule45" anchor="$anchors[23] + (-0.15, 0.3)"><m>\large{36~\times}</m></label>
+  <label name="rule16" anchor="$anchors[6] + (-0.15, 0.3)"><m>\large{15~+}</m></label>
+  <label name="rule36" anchor="$anchors[18] + (-0.15, 0.3)"><m>\large{2~\div}</m></label>
+  <label name="rule56" anchor="$anchors[30] + (-0.15, 0.3)"><m>\large{10~\times}</m></label>
 </graph>
 
 <answer name="check"><award><when>$sols = $ans</when></award></answer>
 
 </activity>
+
 
 
 
