--- a/6p1/index.html
+++ b/6p1/index.html
@@ -115,7 +115,10 @@
 
 <answer name="check"><award><when>$sols = $ans</when></award></answer>
 
+<p><ref uri="https://www.doenet.org/portfolioviewer/_VeDrRqQnCHIJ1lYs1FLrJ" >View this activity on Doenet.org</ref></p>
+  
 </activity>
+
 
 
 
