--- a/thelastofus/index.html
+++ b/thelastofus/index.html
@@ -3,7 +3,7 @@
       <script type="module" src="https://dev.doenet.org/cdn/doenet-standalone.js"> </script>
      <link rel="stylesheet" href="https://dev.doenet.org/cdn/style.css">
  <body onload="onPageLoad()">
-  
+  <img src="JE.jpeg">
  <script>
  function onPageLoad() {
    window.renderDoenetToContainer(document.querySelector(".doenetml-applet"));
@@ -29,7 +29,7 @@ About the activity: My goal in writing this activity was to invite students to w
 
 <section boxed><title>The Last of Us</title>
 
-<img src="JE.jpeg">
+<image source="JE.jpeg">
 
 <p>The Last of Us is a 2013 action-adventure game developed by Naughty Dog and published by Sony Computer Entertainment. Players control Joel, a smuggler tasked with escorting a teenage girl, Ellie, across a post-apocalyptic United States. The Last of Us is played from a third-person perspective. Players use firearms and improvised weapons and can use stealth to defend against hostile humans and cannibalistic creatures infected by a mutated fungus. In the online multiplayer mode, up to eight players engage in cooperative and competitive gameplay <ref uri="https://en.wikipedia.org/wiki/The_Last_of_Us"> (from www.wikipedia.com)</ref></p>
 
