--- a/thelastofus/index.html
+++ b/thelastofus/index.html
@@ -3,7 +3,7 @@
       <script type="module" src="https://dev.doenet.org/cdn/doenet-standalone.js"> </script>
      <link rel="stylesheet" href="https://dev.doenet.org/cdn/style.css">
  <body onload="onPageLoad()">
-  <img src="JE.jpeg">
+  
  <script>
  function onPageLoad() {
    window.renderDoenetToContainer(document.querySelector(".doenetml-applet"));
@@ -29,7 +29,8 @@ About the activity: My goal in writing this activity was to invite students to w
 
 <section boxed><title>The Last of Us</title>
 
-<image source="JE.jpeg">
+<image source="JE.jpeg" width='1080'></image>
+<ref uri = "https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.hbo.com%2Fthe-last-of-us&psig=AOvVaw2q5AVfkfz0gJRGMkk957YW&ust=1691964202200000&source=images&cd=vfe&opi=89978449&ved=0CBAQjRxqFwoTCPDosoWQ2IADFQAAAAAdAAAAABAD"> Image from www.HBO.com</ref>
 
 <p>The Last of Us is a 2013 action-adventure game developed by Naughty Dog and published by Sony Computer Entertainment. Players control Joel, a smuggler tasked with escorting a teenage girl, Ellie, across a post-apocalyptic United States. The Last of Us is played from a third-person perspective. Players use firearms and improvised weapons and can use stealth to defend against hostile humans and cannibalistic creatures infected by a mutated fungus. In the online multiplayer mode, up to eight players engage in cooperative and competitive gameplay <ref uri="https://en.wikipedia.org/wiki/The_Last_of_Us"> (from www.wikipedia.com)</ref></p>
 
@@ -43,8 +44,8 @@ About the activity: My goal in writing this activity was to invite students to w
 
   <p>In our activity, the fungus spreads quite a bit faster to create new clickers according to the pattern below.</p>
     
-  <image source='doenet:cid=bafkreigvrfkje76r6obqavnon4xvxwvemmm7ey3czicvj754rvz6t27en4' description='Clicker Growing Dots' asfilename='clicker growing dots.png' width='800' mimeType='image/png' />
-
+  <image source='clicker.png' description='Clicker Growing Dots' width='800' mimeType='image/png' />
+	
 <!--**********************************************************************
                               Problem 1
 ***********************************************************************-->
